# autoware_vpi

./: .dockerignore  CITATION.cff  Dockerfile  README.md  config.ini  docker-compose.yml  start_all.sh
aw_ros_msgs/: CMakeLists.txt  package.xml
modules/braking-service/: CMakeLists.txt  package.xml
modules/braking-service/include/braking_service/: braking_service.hpp
modules/braking-service/src/: braking_service.cpp  main.cpp
modules/objects-converter/: CMakeLists.txt  package.xml
modules/objects-converter/include/: config_reader.hpp
modules/objects-converter/include/objects_converter/: objects_converter.hpp
modules/objects-converter/src/: main.cpp  objects_converter.cpp
modules/pose-converter/: CMakeLists.txt  package.xml
modules/pose-converter/include/pose_converter/: pose_converter.hpp
modules/pose-converter/src/: main.cpp  pose_converter.cpp
